<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.Form"
    android:padding="16dp">

    <TextView
        android:id="@+id/accountTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/accountChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accountTextView"
        app:singleSelection="true" />

    <TextView
        android:id="@+id/headTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/head"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accountChipGroup" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/headChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headTextView"
        app:singleSelection="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amountTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount_hint"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/headChipGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="numberDecimal"
            android:nextFocusForward="@id/narrationEditText"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout02"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        app:layout_constraintTop_toBottomOf="@id/amountTextField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/receiptBtn"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:textColor="?attr/colorOnSecondary"
            android:backgroundTint="@color/green"
            android:text="@string/receipt"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:cornerRadius="8dp">
        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/paymentBtn"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:textColor="?attr/colorOnSecondary"
            android:backgroundTint="@color/red"
            android:text="@string/payment"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:cornerRadius="8dp">
        </com.google.android.material.button.MaterialButton>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>