<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/home"
            app:menu="@menu/main_menu"
            style="@style/Widget.AppBar" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/overview_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/overview_section"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:textAppearance="?attr/textAppearanceOverline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingStart="12dp"
        android:paddingEnd="4dp"

        tools:listitem="@layout/overview_balance_card"
        tools:itemCount="2"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overview_tv" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:rowCount="4"
        android:columnCount="1"
        android:foregroundGravity="center_horizontal"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/statement_section"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAppearance="?attr/textAppearanceOverline" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/final_statement_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="4dp"
            app:cardCornerRadius="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_final_statement_icon" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/final_statement"
                    android:layout_marginStart="12dp"
                    android:layout_gravity="center"
                    android:textAppearance="?attr/textAppearanceBody1" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/trial_balance_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_trial_balance_icon" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trial_balance"
                    android:layout_marginStart="12dp"
                    android:layout_gravity="center"
                    android:textAppearance="?attr/textAppearanceBody1" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/ledger_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_ledger_account_icon" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ledger_account"
                    android:layout_marginStart="12dp"
                    android:layout_gravity="center"
                    android:textAppearance="?attr/textAppearanceBody1" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/journal_entries_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_journal_entries_icon" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/journal_entries"
                    android:layout_marginStart="12dp"
                    android:layout_gravity="center"
                    android:textAppearance="?attr/textAppearanceBody1" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </GridLayout>

    <!--SECOND MINI FAB-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/journalFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/mainFab"
        app:layout_constraintEnd_toEndOf="@+id/mainFab"
        app:layout_constraintStart_toStartOf="@+id/mainFab"
        app:srcCompat="@drawable/ic_plus" />
    <TextView
        android:id="@+id/journalFabLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/add_entry"
        app:layout_constraintBottom_toBottomOf="@+id/journalFab"
        app:layout_constraintEnd_toStartOf="@+id/journalFab"
        app:layout_constraintTop_toTopOf="@+id/journalFab" />
    <!--SECOND MINI FAB-->

    <!--FIRST MINI FAB-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/voucherFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/journalFab"
        app:layout_constraintEnd_toEndOf="@+id/journalFab"
        app:layout_constraintStart_toStartOf="@+id/journalFab"
        app:srcCompat="@drawable/ic_file" />
    <TextView
        android:id="@+id/voucherFabLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/add_voucher"
        app:layout_constraintBottom_toBottomOf="@+id/voucherFab"
        app:layout_constraintEnd_toStartOf="@+id/voucherFab"
        app:layout_constraintTop_toTopOf="@+id/voucherFab" />
    <!--FIRST MINI FAB-->

    <!-- Main FAB -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mainFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="?attr/colorSecondary"
        android:contentDescription="@string/fab_content_desc"
        app:fabSize="normal"
        app:tint="?attr/colorOnSecondary"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_plus"/>
</androidx.constraintlayout.widget.ConstraintLayout>